@@ -10,6 +10,7 @@ Bugs fixed:
 - 1764101 Fixed segfault in constClass::getPropQualifierAt()
 - 1685254 Fixed sfcb does not return REFERENCECLASS in GetClass
 - 1784913 Fixed change filter handling
+- 1809458 Fixed sfcb local connect lib does not pass on principal info
 
 Changes in 1.2.4
 ================
